--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
 		"@remix-run/vercel": "^1.1.3",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-image-gallery": "^1.2.7",
 		"remix": "^1.1.3"
 	},
 	"devDependencies": {
 		"@remix-run/dev": "^1.1.3",
 		"@types/react": "^17.0.24",
 		"@types/react-dom": "^17.0.9",
+		"@types/react-image-gallery": "^1.0.5",
 		"autoprefixer": "^10.4.2",
 		"concurrently": "^7.0.0",
 		"postcss": "^8.4.6",
